<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditEventActivity"

    >

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/setAllInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/setNewTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.166"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/setNewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/setNewLocationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/setNewTitleLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/setNewLocation"
                        android:layout_width="255dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/location" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/setDetailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.166"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/setNewLocationLayout"
                    app:layout_constraintVertical_bias="0.0">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/setNewDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/detail" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/PlacePickerUPDATEBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/use_map"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.923"
                    app:layout_constraintStart_toEndOf="@+id/setNewLocationLayout"
                    app:layout_constraintTop_toTopOf="@+id/setNewLocationLayout" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="226dp"
                android:background="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                <EditText
                    android:id="@+id/setNewStartDate"
                    android:layout_width="160dp"
                    android:layout_height="63dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/select_event_start_date"
                    android:inputType="date"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/setNewEndDate"
                    android:layout_width="160dp"
                    android:layout_height="63dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/select_event_end_date"
                    android:inputType="date"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/setNewStartDate"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/setNewStartTime"
                    android:layout_width="160dp"
                    android:layout_height="63dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/select_event_start_time"
                    android:inputType="time"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/setNewEndDate" />

                <EditText
                    android:id="@+id/setNewEndTime"
                    android:layout_width="160dp"
                    android:layout_height="63dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/select_event_end_time"
                    android:inputType="time"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/setNewStartTime"
                    app:layout_constraintTop_toBottomOf="@+id/setNewEndDate" />

                <EditText
                    android:id="@+id/setNewAlertDate"
                    android:layout_width="160dp"
                    android:layout_height="63dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/select_event_alert_date"
                    android:inputType="time"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/setNewStartTime"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/setNewAlertTime"
                    android:layout_width="160dp"
                    android:layout_height="63dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/select_event_alert_time"
                    android:inputType="time"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/setNewAlertDate"
                    app:layout_constraintTop_toBottomOf="@+id/setNewEndTime"
                    app:layout_constraintVertical_bias="0.111" />
            </android.support.constraint.ConstraintLayout>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/submitEditEvent"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/update_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4"
        app:layout_constraintVertical_bias="0.198" />


</android.support.constraint.ConstraintLayout>